# GUI_Learning

./: .gitignore  README.md  config.txt  environment.yml
CPP/: AltitudeRender.cpp  CMakeLists.txt  DepthRender.cpp  LabelRender.cpp  PointProjection.cpp  TextureRender.cpp
CPP/shaders/: mesh_altitude.frag  mesh_altitude.vert
CPP/src/: camera.h  depth_render.h  mesh_intersection_structure.cpp  mesh_intersection_structure.h  obj_parser.cpp  obj_parser.h  point_projector.cpp  point_projector.h  xml_parser.cpp  xml_parser.h
Python/: main.py
Python/gui/: InferenceFrame.py  MainWindow.py  MeshFrame.py  PostProcFrame.py  PreprocFrame.py  TrainFrame.py
Python/helpers/: Camera.py  Mesh.py  Metrics.py  Point.py  batch_generator.py  others.py  preprocess.py  template.xml
Python/model/: ThreeDimModel.py  builders.py
Python/shaders/: Amesh_altitude.vert  meshtexture_projection.vert
shaders/: Amesh_altitude.frag  meshtexture_projection.frag
